<menu xmlns:android="http://schemas.android.com/apk/res/android" >

        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/pref_title"/>
        <item
            android:id="@+id/action_generals"
            android:orderInCategory="100"
            android:title="@string/general_pref"/>

        <item
            android:id="@+id/action_trainer"
            android:orderInCategory="100"
            android:title="@string/show_motivator"/>

        <item
            android:id="@+id/action_user"
            android:orderInCategory="100"
            android:title="@string/user"/>

        <item
            android:id="@+id/action_backup"
            android:orderInCategory="100"
            android:title="@string/backup"/>

        <item
            android:id="@+id/action_restore"
            android:orderInCategory="100"
            android:title="@string/restore"/>
</menu>
